scss/layout/_posts_pages.scss
.single-posts-area,
.swp-single-posts-area {
  background: $bkg-gray;
  position: relative;
  min-height: 100vh;
  z-index: 1;
}

.single-post,
.swp-single-post,
.search-results-list {
  position: relative;
  max-width: 34em;
  margin: 0 auto;
  padding: 7px 16px 30px;
}

.single-post h2 {
  font-size: 1.636em;
  line-height: 1.85em;
  margin-top: 1.15em;
  margin-bottom: 1.6em;
}

.single-post p,
.swp-single-post p {
  margin-bottom: 1.8em;
}

.single-post i {
  margin-bottom: 0.8em;
}

.previous-link,
.next-link {
  display: inline;
}

.previous-link a,
.next-link a {
  text-decoration: none;
}

.next-link {
  float: right;
}

img.size-thumbnail.alignleft,
img.size-thumbnail.alignright {
  position: relative;
  @include light-gray-box-shadow;
}

img.size-thumbnail.alignleft {
  float: left;
  margin-right: 5px;
  left: -10px;
}

img.size-thumbnail.alignright {
  float: right;
  margin-left: 5px;
  right: -10px;
}

.announcements-bkg {
    position: relative;
    padding: 50px 0;
    margin: 0;
    z-index: 0
}

.region-buttons {
  position: relative;
  width: 300px;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.region-buttons a {
  text-decoration: none;
  flex-basis: 250px;
  margin-top: 50px;
  color: #fff;
}

.region-buttons a:first-child {

}

.region-buttons a:last-child {
  margin-bottom: 120px;
}

.iceland-area {

}

.iceland-area-name {
  height: 45px;
  background: $transparent-theme-blue;
  color: $theme-blue;
  border-radius: 3px;
  border: 1px solid $theme-blue;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.3s;
}

.iceland-area-name:hover {
  background: $theme-blue;
  color: $blue;
  transition: 0.7s;
}

.iceland-area-name p {
  margin: 0;
  line-height: 1em;
}

.search-results-area {
  background: $bkg-gray;
}

.search-results-list {
  padding: 60px 16px 30px;
}

.search-results-list span {
  color: $red;
  text-align: left;
}

.search-results-list h2 {
  text-align: left;
}

.swp-headlines {
  margin-bottom: 60px;
}

.swp-headlines h4 {
  text-align: center;
  margin-top: -7px;
  color: #666;
}

.swp-headlines svg {
  height: 22px;
  position: relative;
  top: 7px;
  margin-right: -7px;
}

.swp-contact-info {
  display: block;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-bottom: 30px;
  width: 260px;
  border: 1px solid #afafaf;
  padding: 7px;
  background: #dfdfdf;
  box-shadow: 2px 2px 2px #888;
}

.swp-contact-info p {
  display: flex;
  align-items: center;
  margin-bottom: 7px;
}

.swp-contact-info svg {
  height: 20px;
  width: auto;
  fill: $theme-blue;
  margin-right: 5px;
}

.swp-opening-hours p {
  margin-bottom: 0 !important;
  font-weight: bold;
  color: #333;
}

.swp-opening-hours ul {
  margin-top: -5px;
  margin-bottom: 50px;
  list-style: none;
}

.swp-opeing-hours ul svg {
  height: 10px;
}

.swp-opening-hours li {
  margin-bottom: 0px;
}

.swp-price-list table {
  width: 100%;
  font-size: 2.1vw;
}

.swp-price-list tbody,
.swp-price-list tbody:last-of-type {
  border-bottom: 35px solid;
}

.swp-price-list tbody:first-of-type {
  border-top: 15px solid;
}

.swp-price-list tbody,
.swp-price-list tbody:first-of-type,
.swp-price-list tbody:last-of-type {
  border-color: $bkg-gray;
}

.swp-price-list tr:nth-child(even) {
  background: #dfdfdf;
}

.swp-price-list th {
  font-size: 0.9em;
  font-weight: 600;
  color: $theme-blue;
}

.swp-price-list td {
  font-size: 0.85em;
  padding: 5px;
  color: #777;
}

.swp-price-list td {
    border-right: 1px solid;
}

.swp-price-list td:last-of-type {
    border: 0;
}

.price-more-info {
  font-size: 0.85em;
  margin-top: -30px;
  margin-bottom: 60px;
}

.swp-images-mobile {
  max-width: 164px;
  height: 321px;
  overflow: hidden;
  display: block;
  margin: 60px auto;
}

.swp-images-display {
  display: none;
}

.swp-images img {
  @include light-gray-box-shadow;
}

.swp-images.swp-images-mobile p {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 480px;
  margin: 0 auto;
}

.swp-images.swp-images-mobile p img {
  margin-right: 10px;
  margin-bottom: 10px;
}

.swp-listing,
.sund-kennsla-listing {
  position: relative;
  z-index: 2;
}

.swp-listing-title,
.sund-kennsla-title {
  margin: 0;
  padding: 0.4em 0.5em;
  font-size: 1.3em;
}

.swp-listing-bkg,
.sund-kennsla-listing-bkg {
  background: $transparent-orange;
  transition: .3s;
}

.swp-listing-bkg:hover,
.sund-kennsla-listing-bkg:hover {
  background: rgba(180, 85, 51, 0.3);
  transition: .7s;
}

.feature-image {
  position: relative;
  float: left;
  margin-top: 10px;
  margin-bottom: 0;
  margin-right: 10px;
  margin-left: 0px;
}

.feature-image img {
  height: 82px;
  width: 82px;
}

#frettir h2 {
  margin-bottom: 1.3em;
}

#frettir .ad-cubes-area {
  margin-top: 50px;
}

.frettir-texti-tvo {
  padding-top: 10px;
}

@include mobile-landscape-nrw {
  .swp-images-mobile {
    max-width: 344px;
    height: 311px;
  }
}

@include mobile-landscape {
  .feature-image img {
    height: 100px;
    width: 100px;
  }

  .swp-price-list table {
    font-size: 0.8em;
  }
}

@include tablets {
  .single-post,
  .swp-single-post {
    padding: 7px 16px 100px;
  }

  .single-post h2 {
    font-size: 2.636em;
    line-height: 1.85em;
    margin-top: 0.97em;
    margin-bottom: 2.3em;
  }

  .single-post p,
  .swp-single-post p {
    line-height: 1.65em;
    margin-bottom: 1.63em;
  }

  .swp-contact-info p {
    font-size: 0.85em;
    margin-bottom: 5px;
  }

  .swp-price-list table {
    width: 100%;
  }

  .single-post i {
    margin-bottom: 0.4em;
  }

  .announcements-bkg {
      padding: 30px 0;
  }

  .region-buttons {
    width: 740px;
  }

  .swp-listing-title,
  .sund-kennsla-title {
    font-size: 1.618em;
  }

  .swp-images-mobile {
    display: none;
  }

  .swp-images-display {
    display: block;
  }

  .swp-single-post {
    position: relative;
    max-width: 43em;
  }

  .swp-single-post h2 {

  }

  .swp-headlines {
    margin-bottom: 90px;
  }

  .swp-headlines h4 {
    margin-top: -10px;
  }

  .swp-headlines svg {
    height: 32px;
    top: 11px;
    margin-right: -11px;
  }

  .swp-images {
    position: absolute;
    overflow: scroll;
    height: 520px;
    width: 167px;
    right: -30px;
    margin: 0px 0 0px 20px;
  }

  .swp-images img {
    margin-bottom: 15px;
  }

  .swp-price-list th {
    font-size: 1.05em;
  }

  .swp-price-list td {
    font-size: 1em;
  }

  .feature-image img {
    height: 120px;
    width: 120px;
  }

  #frettir .ads-cube-one-overflow-hidden,
  #frettir .ads-cube-two-overflow-hidden {
    max-width: 256px;
  }
}

@include displays {
  .region-buttons,
  .region-buttons-content {
    width: 940px;
    margin: 0 auto;
  }
}

